# xkernel

./: CMakeLists.txt  link.ld  multiboot.S  utils.cmake
include/: kmain.h  types.h
include/utils/: initializable.h  printk.h  string.h  vga_writer.h
source/: kmain.cpp
source/utils/: printk.cpp  string.cpp  vga_writer.cpp
